--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,13 +43,20 @@ p {
   text-shadow: rgba(0, 0, 0, 1) 11px 7px 15px;
 }
 
-h3 {
+h3,
+h2,
+.drinkstop-text {
   font-family: "Bebas Neue", sans-serif;
   font-size: 33px !important;
 }
 
 .bg-color {
   background-color: rgba(245, 222, 179, 0.742) !important;
+}
+
+.blur {
+  backdrop-filter: blur(5px);
+  --bs-backdrop-opacity: 0.8 !important;
 }
 
 .row-item {
