--- a/client/src/pages/Orders/Orders.css
+++ b/client/src/pages/Orders/Orders.css
@@ -32,6 +32,10 @@
     box-shadow: none;
     background-color: transparent;
     width: 100%;
+
+    .price-container {
+      width: 250px;
+    }
   }
 
   .total {
