--- a/client/src/components/ProductsGrid/ProductsGrid.css
+++ b/client/src/components/ProductsGrid/ProductsGrid.css
@@ -2,8 +2,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 1rem;
-  margin: 1rem 0;
+  margin: 1rem auto;
   padding: 40px;
+  max-width: 1400px;
 
   .grid-item {
     display: flex;
