--- a/client/src/media-queries.css
+++ b/client/src/media-queries.css
@@ -1,3 +1,9 @@
+@media screen and (min-width: 391px) and (max-width: 1100px) {
+  .App {
+    zoom: 0.7;
+  }
+}
+
 @media screen and (max-width: 390px) {
   h1 {
     font-size: 100px !important;
