--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,9 @@
   min-height: 100vh;
 
   main {
+    min-height: 100%;
     padding-top: 20px;
+    padding-bottom: 20px;
     flex: 1;
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),
       url("bg.jpg");
