--- a/client/src/components/ProductsGrid/ProductsGrid.css
+++ b/client/src/components/ProductsGrid/ProductsGrid.css
@@ -34,6 +34,10 @@
       font-size: 1rem;
       font-weight: 700;
       margin: 0.5rem 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      max-height: 71px;
     }
 
     .product-price {
