--- a/client/src/pages/ForgotPassword/ForgotPassword.css
+++ b/client/src/pages/ForgotPassword/ForgotPassword.css
@@ -1,11 +1,9 @@
-#profile {
+#login {
   form {
     min-width: 450px;
     max-width: 600px;
     padding: 30px;
     border-radius: 15px;
-    display: flex;
-    flex-direction: column;
 
     .form-label {
       font-size: 1.2rem;
