--- a/client/src/components/ProductsGrid/ProductsGrid.css
+++ b/client/src/components/ProductsGrid/ProductsGrid.css
@@ -34,10 +34,13 @@
       font-size: 1rem;
       font-weight: 700;
       margin: 0.5rem 0;
+      margin: 0 auto !important;
+      display: -webkit-box;
+      max-width: 200px;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
       overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      max-height: 71px;
+      text-align: center;
     }
 
     .product-price {
